[package]
name = "wgpui"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.23.2"
glam = { version = "0.30.5", features = ["bytemuck"] }
bitflags = "2.9.2"
paste = "1.0.15"
image = "0.25.8"

macros = { path = "./macros" }

wgpu = "27.0.1"
winit = "0.30.12"

cosmic-text = "0.14.2"
etagere = "0.2.15"

log = "0.4.27"
env_logger = "0.11.8"
ahash = "0.7.8"
# arboard = "3.6.1"
unicode-segmentation = "1.12.0"
clipboard = "0.5.0"
itertools = "0.14.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = "0.3.31"
wasm-bindgen = "0.2.100"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
web-time = "1.1.0"
wasm-bindgen-futures = "0.4.51"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]


[features]
default = ["wgpu/default"]
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/webgpu"]

[profile.release]
debug = true


# webgpu = ["wgpu/webgpu"]
